--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-bento",
+  "name": "bion",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -23,7 +23,9 @@
     "@supabase/supabase-js": "^2.91.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
+    "magic-ui": "^0.1.0",
     "next": "16.1.4",
     "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
