--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
-    "framer-motion": "12.29.3",
+    "framer-motion": "^12.31.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.563.0",
     "motion": "^12.30.0",
@@ -58,7 +58,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zod": "3.25.76"
@@ -69,7 +69,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
-    "tailwindcss": "^4.1.9",
+    "tailwindcss": "^4.1.18",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
   }
